# chemhop-voice

./: .gitignore  README.md
admet-service/: README.md  main.py  pyproject.toml
admet-service/src/: __init__.py  server.py
backend/: Dockerfile  Makefile  dev_start.sh  docker-compose.yml  main.py  mcp_start.py  pyproject.toml  requirements.txt  requirements_dev.txt
backend/services/voice-agent/: voice_agent_system_prompt.md
backend/smarts_chemist/: generate_db.py  test_query.py
backend/smarts_chemist/tools/: smart_chemist.py
backend/src/api/: routers.py
backend/src/api/dependencies/: auth.py
backend/src/api/endpoints/: admet.py  chat.py  health.py  molecule.py  patent.py  voice_agent.py
backend/src/api/models/: __init__.py  admet.py  chat.py  error.py  mcp_models.py  molecule.py  voice.py
backend/src/config/: database.py  settings.py
backend/src/controllers/: admet_controller.py  bioisostere_controller.py  chat_controller.py  molecule_controller.py
backend/src/middleware/: error_handling.py  request_logging.py
backend/src/services/chatAgent/: agent.py
backend/src/services/elevenlabs/: __init__.py  create_agent.py  knowledge_base.py
backend/src/services/mcp/: __init__.py  mcp_server.py
backend/src/services/mcp/admet_ai/tools/: __init__.py
backend/src/services/mcp/admet_tools/: __init__.py  admet_ai_tool.py
backend/src/services/mcp/literature_search/: semantic_scholar.py  ss_wrapper.py
backend/src/services/mcp/patent_search/: __init__.py  surechembl_tool.py
backend/src/services/mcp/ring_scan/: .gitignore  BIOISOSTERE_PLAN.md  README.md  __init__.py  test_scanner.py
backend/src/services/mcp/ring_scan/ring_data/simple_rings/: Chemspace_Carboxylic_Acid_Bioisosteres.smi  (+6 more)
backend/src/services/mcp/ring_scan/tools/: __init__.py  bioisostere_scanner.py
backend/src/services/mcp/smart_chemist/: README.md  __init__.py  generate_db.py  test_query.py
backend/src/services/mcp/smart_chemist/db/: smart_chemist.db  smarts_with_hierarchy.csv
backend/src/services/mcp/smart_chemist/models/: __init__.py
backend/src/services/mcp/smart_chemist/tools/: smart_chemist.py
backend/src/services/prompts/: __init__.py  chat_prompt.py  chat_prompts.py  voice_agent_prompts.py
backend/src/utils/: rate_limiter.py  realtime_compat.py
backend/tests/: demo.py  test_chat.py  test_svg_in_matches.py
(+54 files in other folders)
