[project]
name = "backend"
version = "0.1.0"
description = "Tir-us Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and dependencies
    "fastapi>=0.104.0",
    "starlette>=0.34.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "gunicorn>=21.0.0",
    
    # Database
    "supabase==2.24.0",
    "gotrue>=2.0.0",
    "sqlalchemy>=2.0.44",
    
    # Authentication
    "authlib>=1.2.0",
    "python-multipart>=0.0.6",
    
    # Async support
    "httpx[http2]>=0.28.1,<0.29.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.10.0,<4.0.0",
    "websockets>=11.0.0,<16.0.0",
    
    # Caching
    "redis>=5.0.0",
    
    # Background jobs
    "celery>=5.3.0",
    "flower>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.5",
    "packaging>=24.2.0",
    "protobuf>=5.0,<7.0",
    "pyyaml==6.0.1",
    "pgeocode>=0.4.0",
    "rapidfuzz",
    
    # Google integrations
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-generativeai>=0.8.0,<0.9.0",
    
    # LLM
    "openai>=1.0.0",
    "typer>=0.12.5,<0.16.0",
    
    # Chemistry/SMARTS processing
    "pandas>=2.3.3",
    "rdkit>=2025.9.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]
